Navbar jump fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -1010,10 +1010,8 @@ header {
 
 .nav--open {
   position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  width: 100%;
+  height: 100%;
   padding: 8rem 3.4vh 0;
   display: block;
   z-index: 50;
